Use new switch statements